--- a/main.html
+++ b/main.html
@@ -7,7 +7,34 @@
 </head>
 
 <body>
+
+	
 	<!-- the entire body must be written by student -->
+	<form>
+		
+		<label for="name">Name</label>
+		<input type="text" id="name" name="name" placeholder="Name">
+
+		<label for="Phone">Phone Number</label>
+		<input type="text" id="phone" name="phone" placeholder="Phone-Number">
+
+		<label for="address">Address</label>
+		<input type="text" id="address" name="address" placeholder="Address">
+
+		<label for="checkbox">Have you ever lived with a Dog before?</label>
+		<input type="checkbox" id="checkbox" name="checkbox" value="Have you ever lived with a Dog?">
+
+		<label for="select">Please select you preferred breeds</label>
+		<select id="multiSelect" name="select">
+			<option value="Labrador Retriever">Labrador Retriever</option>
+            <option value="German Shepherd">German Shepherd</option>
+            <option value="Golden Retriever">Golden Retriever</option>
+		</select>		
+
+		<button type="submit" id="submit" value="Submit">Submit</button>
+	</form>
+
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
