--- a/main.html
+++ b/main.html
@@ -31,7 +31,7 @@
             <option value="Golden Retriever">Golden Retriever</option>
 		</select>		
 
-		<button type="submit" id="submit" value="Submit">Submit</button>
+		<input type="submit" id="multiSelect" value="Submit">
 	</form>
 
 	
