--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
 		<input type="text" id="name" name="name" placeholder="Name">
 
 		<label for="Phone">Phone Number</label>
-		<input type="text" id="phone" name="phone" placeholder="Phone-Number">
+		<input type="text" id="phone" name="phone" placeholder="Phone Number">
 
 		<label for="address">Address</label>
 		<input type="text" id="address" name="address" placeholder="Address">
